--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,10 @@ dependencies:
     sdk: flutter
   file_picker: ^5.2.5
   provider: ^6.0.5
+  excel: any
+  sqflite: any
+  sqflite_common_ffi: any
+  path_provider: any
 
 
   # The following adds the Cupertino Icons font to your application.
