--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   sqflite_common_ffi: any
   file_picker: any
   excel:  any
+  syncfusion_flutter_datagrid: ^21.2.4
+#  sticky_headers_table: ^0.0.9
 dev_dependencies:
   flutter_test:
     sdk: flutter
