--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   file_picker: any
   excel:  any
   syncfusion_flutter_datagrid: ^21.2.4
+  typed_data: ^1.3.0
 #  sticky_headers_table: ^0.0.9
 dev_dependencies:
   flutter_test:
