--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   excel:  any
   syncfusion_flutter_datagrid: ^21.2.4
   typed_data: ^1.3.0
+  flutter_typeahead: ^4.0.0
 #  sticky_headers_table: ^0.0.9
 dev_dependencies:
   flutter_test:
