--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   syncfusion_flutter_datagrid: ^21.2.4
   typed_data: ^1.3.0
   flutter_typeahead: ^4.0.0
+  font_awesome_flutter: ^10.4.0
+  glassmorphism: any
+  shared_preferences: ^2.0.15
 #  sticky_headers_table: ^0.0.9
 dev_dependencies:
   flutter_test:
