--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -100,3 +100,12 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
+  fonts:
+    - family: HarmonyFont
+      fonts:
+        - asset: lib/assets/fonts/HarmonyOS_Sans_Black.ttf
+        - asset: lib/assets/fonts/HarmonyOS_Sans_Bold.ttf
+        - asset: lib/assets/fonts/HarmonyOS_Sans_Light.ttf
+        - asset: lib/assets/fonts/HarmonyOS_Sans_Medium.ttf
+        - asset: lib/assets/fonts/HarmonyOS_Sans_Regular.ttf
+        - asset: lib/assets/fonts/HarmonyOS_Sans_Thin.ttf
