--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,9 @@ dependencies:
   font_awesome_flutter: ^10.4.0
   glassmorphism: ^3.0.0
   shared_preferences: ^2.0.15
+  flutter_localizations:
+    sdk: flutter
+  intl: any
 #  sticky_headers_table: ^0.0.9
 dev_dependencies:
   flutter_test:
@@ -63,11 +66,17 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
+  fonts:
+    - family: HarmonyFont
+      fonts:
+        - asset: fonts/HarmonyOS_Sans_Black.ttf
+        - asset: fonts/HarmonyOS_Sans_Bold.ttf
+        - asset: fonts/HarmonyOS_Sans_Light.ttf
+        - asset: fonts/HarmonyOS_Sans_Medium.ttf
+        - asset: fonts/HarmonyOS_Sans_Regular.ttf
+        - asset: fonts/HarmonyOS_Sans_Thin.ttf
   assets:
     - lib/assets/
-  # The following line ensures that the Material Icons font is
-  # included with your application, so that you can use the icons in
-  # the material Icons class.
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
@@ -100,12 +109,3 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
-  fonts:
-    - family: HarmonyFont
-      fonts:
-        - asset: lib/assets/fonts/HarmonyOS_Sans_Black.ttf
-        - asset: lib/assets/fonts/HarmonyOS_Sans_Bold.ttf
-        - asset: lib/assets/fonts/HarmonyOS_Sans_Light.ttf
-        - asset: lib/assets/fonts/HarmonyOS_Sans_Medium.ttf
-        - asset: lib/assets/fonts/HarmonyOS_Sans_Regular.ttf
-        - asset: lib/assets/fonts/HarmonyOS_Sans_Thin.ttf
