--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -22,11 +22,15 @@ jobs:
       - name: Install dependencies
         run: flutter pub get
 
+      # 如果项目中有测试用例，可以启用这一步
+      - name: Run tests
+        run: flutter test
+
       - name: Build Windows Release
         run: flutter build windows --release
 
       - name: Upload Release Artifact
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v3
         with:
           name: windows-release
           path: build/windows/runner/Release/
