--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -1,4 +1,4 @@
-name: Flutter Windows Release
+name: Flutter Windows and Linux Release
 
 on:
   push:
@@ -8,7 +8,17 @@ on:
 
 jobs:
   build:
-    runs-on: windows-latest
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [windows-latest, ubuntu-latest]
+        include:
+          - os: windows-latest
+            platform: windows
+            path: build/windows/x64/runner/Release/
+          - os: ubuntu-latest
+            platform: linux
+            path: build/linux/x64/release/
 
     steps:
       - name: Checkout repository
@@ -19,20 +29,25 @@ jobs:
         with:
           flutter-version: '3.x'  # 根据需要指定 Flutter 版本
 
-      - name: Enable Windows Desktop Support
-        run: flutter config --enable-windows-desktop
+      - name: Enable Desktop Support
+        run: flutter config --enable-windows-desktop --enable-linux-desktop
 
-      - name: Add Windows Platform Support
-        run: flutter create --platforms=windows .
+      - name: Add Platform Support
+        run: flutter create --platforms=windows,linux .
 
       - name: Install dependencies
         run: flutter pub get
-        
-      - name: Build Windows Release
-        run: flutter build windows --release
+
+      - name: Build Release
+        run: |
+          if [ "${{ matrix.platform }}" == "windows" ]; then
+            flutter build windows --release
+          elif [ "${{ matrix.platform }}" == "linux" ]; then
+            flutter build linux --release
+          fi
 
       - name: Upload Release Artifact
         uses: actions/upload-artifact@v4
         with:
-          name: windows-release
-          path: build/windows/x64/runner/Release/
+          name: ${{ matrix.platform }}-release
+          path: ${{ matrix.path }}
