--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -38,6 +38,12 @@ jobs:
       - name: Install dependencies
         run: flutter pub get
 
+      # Install dependencies required for building Linux
+      - name: Install build dependencies for Linux
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y cmake ninja-build g++ pkg-config libgtk-3-dev
+
       - name: Build Release
         run: |
           if [ "${{ matrix.platform }}" == "windows" ]; then
