--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -1,4 +1,4 @@
-name: Flutter Windows Release
+name: Flutter Windows, Linux, and Android Release
 
 on:
   push:
@@ -53,7 +53,7 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y cmake ninja-build pkg-config libgtk-3-dev liblzma-dev
-
+      
       - name: Enable Linux Desktop Support
         run: flutter config --enable-linux-desktop
 
@@ -71,3 +71,27 @@ jobs:
         with:
           name: linux-release
           path: build/linux/x64/release/bundle/
+
+  build-android:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Set up Flutter
+        uses: subosito/flutter-action@v2
+        with:
+          flutter-version: '3.x'  # 根据需要指定 Flutter 版本
+
+      - name: Install Flutter dependencies
+        run: flutter pub get
+
+      - name: Build Android APK
+        run: flutter build apk --release
+
+      - name: Upload Android APK Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: android-apk
+          path: build/app/outputs/flutter-apk/app-release.apk
