--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -7,71 +7,71 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build-windows:
-    runs-on: windows-latest
+  # build-windows:
+  #   runs-on: windows-latest
 
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+  #   steps:
+  #     - name: Checkout repository
+  #       uses: actions/checkout@v4
 
-      - name: Set up Flutter
-        uses: subosito/flutter-action@v2
-        with:
-          flutter-version: '3.x'  # 根据需要指定 Flutter 版本
+  #     - name: Set up Flutter
+  #       uses: subosito/flutter-action@v2
+  #       with:
+  #         flutter-version: '3.x'  # 根据需要指定 Flutter 版本
 
-      - name: Enable Windows Desktop Support
-        run: flutter config --enable-windows-desktop
+  #     - name: Enable Windows Desktop Support
+  #       run: flutter config --enable-windows-desktop
 
-      - name: Add Windows Platform Support
-        run: flutter create --platforms=windows .
+  #     - name: Add Windows Platform Support
+  #       run: flutter create --platforms=windows .
 
-      - name: Install dependencies
-        run: flutter pub get
+  #     - name: Install dependencies
+  #       run: flutter pub get
 
-      - name: Build Windows Release
-        run: flutter build windows --release
+  #     - name: Build Windows Release
+  #       run: flutter build windows --release
 
-      - name: Upload Windows Release Artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: windows-release
-          path: build/windows/x64/runner/Release/
+  #     - name: Upload Windows Release Artifact
+  #       uses: actions/upload-artifact@v4
+  #       with:
+  #         name: windows-release
+  #         path: build/windows/x64/runner/Release/
 
-  build-linux:
-    runs-on: ubuntu-latest
+  # build-linux:
+  #   runs-on: ubuntu-latest
 
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+  #   steps:
+  #     - name: Checkout repository
+  #       uses: actions/checkout@v4
 
-      - name: Set up Flutter
-        uses: subosito/flutter-action@v2
-        with:
-          flutter-version: '3.x'  # 根据需要指定 Flutter 版本
+  #     - name: Set up Flutter
+  #       uses: subosito/flutter-action@v2
+  #       with:
+  #         flutter-version: '3.x'  # 根据需要指定 Flutter 版本
 
-      - name: Install dependencies for Linux build
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y cmake ninja-build pkg-config libgtk-3-dev liblzma-dev
+  #     - name: Install dependencies for Linux build
+  #       run: |
+  #         sudo apt-get update
+  #         sudo apt-get install -y cmake ninja-build pkg-config libgtk-3-dev liblzma-dev
       
-      - name: Enable Linux Desktop Support
-        run: flutter config --enable-linux-desktop
+  #     - name: Enable Linux Desktop Support
+  #       run: flutter config --enable-linux-desktop
 
-      - name: Add Linux Platform Support
-        run: flutter create --platforms=linux .
+  #     - name: Add Linux Platform Support
+  #       run: flutter create --platforms=linux .
 
-      - name: Install Flutter dependencies
-        run: flutter pub get
+  #     - name: Install Flutter dependencies
+  #       run: flutter pub get
 
-      - name: Build Linux Release
-        run: flutter build linux --release
+  #     - name: Build Linux Release
+  #       run: flutter build linux --release
 
-      - name: Upload Linux Release Artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: linux-release
-          path: build/linux/x64/release/bundle/
-
+  #     - name: Upload Linux Release Artifact
+  #       uses: actions/upload-artifact@v4
+  #       with:
+  #         name: linux-release
+  #         path: build/linux/x64/release/bundle/
+          
   build-android:
     runs-on: ubuntu-latest
 
@@ -87,6 +87,18 @@ jobs:
       - name: Install Flutter dependencies
         run: flutter pub get
 
+      - name: Update Gradle Wrapper
+        run: ./gradlew wrapper --gradle-version 8.2 --distribution-type all
+        working-directory: android
+
+      - name: Update Android Build Tools
+        run: sed -i 's/com.android.tools.build:gradle:[0-9.]*/com.android.tools.build:gradle:8.1.0/g' android/build.gradle
+
+      - name: Update Gradle Properties
+        run: |
+          echo "android.useAndroidX=true" >> android/gradle.properties
+          echo "android.enableJetifier=true" >> android/gradle.properties
+
       - name: Build Android APK
         run: flutter build apk --release
 
@@ -95,3 +107,4 @@ jobs:
         with:
           name: android-apk
           path: build/app/outputs/flutter-apk/app-release.apk
+
