--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,17 +38,17 @@ dependencies:
   path_provider: ^2.1.5
   sqflite: ^2.4.1
   sqflite_common_ffi: ^2.3.4+4
-  file_picker: ^8.3.2
+  file_picker: ^9.0.0
   excel:  ^4.0.6
-  syncfusion_flutter_datagrid: ^21.2.4
+  syncfusion_flutter_datagrid: ^28.2.5
   typed_data: ^1.3.0
-  flutter_typeahead: ^4.0.0
+  flutter_typeahead: ^5.2.0
   font_awesome_flutter: ^10.4.0
   glassmorphism: ^3.0.0
   shared_preferences: ^2.0.15
   flutter_localizations:
     sdk: flutter
-  intl: any
+  intl: ^0.19.0
 #  sticky_headers_table: ^0.0.9
 dev_dependencies:
   flutter_test:
@@ -59,7 +59,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^4.0.0
+  flutter_lints: ^5.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
